# cedar-backup3

./: .bandit_baseline  .coveragerc  .gitattributes  .gitignore  .hgeol  .hgignore  .pre-commit-config.yaml  .pylintrc  .tabignore  .toxrc  CREDITS  Changelog  DEVELOPER.md  INSTALL  MANIFEST.in  Makefile  NOTICE  PyPI.md  README  README.md  SECURITY.md  TODO  cback  cback3  pylint-code.rc  pylint-test.rc  pyproject.toml  run  setup.py  tools.ps1
.github/workflows/: codeql-analysis.yml  test-suite.yml  tox.yml
.run/: addendum.sh  util.sh
.run/commands/: pylint.sh  tagrelease.sh
.run/tasks/: checks.sh  diagnostics.sh  mypy.sh  pylint.sh  release.sh  suite.sh  test.sh
CedarBackup2/: __init__.py  action.py  cli.py  config.py  customize.py  filesystem.py  image.py  knapsack.py  peer.py  release.py  testutil.py  util.py  writer.py  xmlutil.py
CedarBackup2/actions/: __init__.py  collect.py  constants.py  initialize.py  purge.py  rebuild.py  stage.py  store.py  util.py  validate.py
CedarBackup2/extend/: __init__.py  amazons3.py  capacity.py  encrypt.py  mbox.py  mysql.py  postgresql.py  split.py  subversion.py  sysinfo.py
CedarBackup2/tools/: __init__.py  amazons3.py  span.py
CedarBackup2/writers/: __init__.py  cdwriter.py  dvdwriter.py  util.py
CedarBackup3/: __init__.py  action.py  cli.py  config.py  customize.py  filesystem.py  image.py  knapsack.py  peer.py  release.py  testutil.py  util.py  writer.py  xmlutil.py
CedarBackup3/actions/: __init__.py  collect.py  constants.py  initialize.py  purge.py  rebuild.py  stage.py  store.py  util.py  validate.py
CedarBackup3/extend/: __init__.py  amazons3.py  capacity.py  encrypt.py  mbox.py  mysql.py  postgresql.py  split.py  subversion.py  sysinfo.py
CedarBackup3/tools/: __init__.py  amazons3.py  span.py
CedarBackup3/writers/: __init__.py  cdwriter.py  dvdwriter.py  util.py
doc/: cback-amazons3-sync.1  cback-span.1  cback.1  cback.conf.sample  cback3-amazons3-sync.1  cback3-span.1  cback3.1  docbook.txt  docfixes.20050911.txt  gmailfs.txt  mysql-fixes.txt  procedure.txt  release.txt
doc/future/: README  prune.py  prunetests.py
doc/obsolete/: Makefile.pychecker  pycheckrc
doc/osx/: notes.txt  start-automount  stop-automount
doc/pdf/: Makefile  README.txt  fo-stylesheet.xsl  run-fop.sh
docs/: conf.py  index.rst  requirements.txt
docs/manual/: basic.rst  commandline.rst  config.rst  copyright.rst  depends.rst  extensions.rst  extenspec.rst  index.rst  install.rst  intro.rst  preface.rst  recovering.rst  securingssh.rst
manpages/: cback3-amazons3-sync.1  cback3-span.1  cback3.1
manual/: Makefile
manual/src/: basic.xml  book.xml  commandline.xml  config.xml  copyright.xml  depends.xml  extensions.xml  extenspec.xml  install.xml  intro.xml  preface.xml  recovering.xml  securingssh.xml
notes/: createtree.py  docbook.txt  release.md
samples/: cback3.conf.sample
sphinx/: CedarBackup3.actions.rst  CedarBackup3.extend.rst  CedarBackup3.rst  CedarBackup3.tools.rst  CedarBackup3.writers.rst  Makefile  conf.py  index.rst
src/CedarBackup3/: __init__.py  action.py  cli.py  config.py  customize.py  filesystem.py  image.py  knapsack.py  peer.py  release.py  scripts.py  testutil.py  util.py  writer.py  xmlutil.py
src/CedarBackup3/actions/: __init__.py  collect.py  constants.py  initialize.py  purge.py  rebuild.py  stage.py  store.py  util.py  validate.py
src/CedarBackup3/extend/: __init__.py  amazons3.py  capacity.py  encrypt.py  mbox.py  mysql.py  postgresql.py  split.py  subversion.py  sysinfo.py
src/CedarBackup3/tools/: __init__.py  amazons3.py  span.py
src/CedarBackup3/writers/: __init__.py  cdwriter.py  dvdwriter.py  util.py
testcase/: __init__.py  actionsutiltests.py  amazons3tests.py  capacitytests.py  cdwritertests.py  clitests.py  configtests.py  customizetests.py  dvdwritertests.py  encrypttests.py  filesystemtests.py  knapsacktests.py  mboxtests.py  mysqltests.py  peertests.py  postgresqltests.py  spantests.py  splittests.py  subversiontests.py  synctests.py  utiltests.py  writersutiltests.py
testcase/data/: amazons3.conf.2  amazons3.conf.3  capacity.conf.2  capacity.conf.3  cback.conf.12  cback.conf.14  cback.conf.15  cback.conf.18  cback.conf.19  cback.conf.3  cback.conf.4  cback.conf.6  cback.conf.8  lotsoflines.py  mbox.conf.4  mysql.conf.4  postgresql.conf.2  postgresql.conf.5  split.conf.4  subversion.conf.2  subversion.conf.6  tree2.ini  tree4.ini  tree5.ini
tests/: __init__.py  actionsutiltests.py  amazons3tests.py  capacitytests.py  cdwritertests.py  clitests.py  configtests.py  customizetests.py  dvdwritertests.py  encrypttests.py  filesystemtests.py  knapsacktests.py  mboxtests.py  mysqltests.py  peertests.py  postgresqltests.py  spantests.py  splittests.py  subversiontests.py  synctests.py  test_actions_util.py  test_amazons3.py  test_capacity.py  test_cdwriter.py  test_cli.py  test_config.py  test_customize.py  test_dvdwriter.py  test_encrypt.py  test_filesystem.py  test_knapsack.py  test_mbox.py  test_mysql.py  test_peer.py  test_postgresql.py  test_span.py  test_split.py  test_subversion.py  test_sync.py  test_util.py  (+3 more)
tests/data/: capacity.conf.4  cback.conf.1  cback.conf.10  cback.conf.11  cback.conf.13  cback.conf.16  cback.conf.17  cback.conf.19  cback.conf.20  cback.conf.21  cback.conf.22  cback.conf.23  cback.conf.5  cback.conf.7  cback.conf.9  encrypt.conf.2  lotsoflines.py  mbox.conf.2  mbox.conf.3  mysql.conf.2  mysql.conf.3  mysql.conf.5  postgresql.conf.3  postgresql.conf.4  split.conf.2  split.conf.3  split.conf.5  subversion.conf.1  subversion.conf.3  subversion.conf.4  subversion.conf.5  subversion.conf.7  tree1.ini  tree3.ini  tree6.ini  tree9.ini
util/: __init__.py  branch  cback-amazons3-sync  cback-span  cback3-amazons3-sync  cback3-span  cleanup  convert  createtree.ini  createtree.py  diff  jenkins  knapsackdemo.py  release  sorttags.py  sphinx-convert  svnupdate.bat  test.py  validate  virtualenv
util/docbook/: chunk-stylesheet.xsl  dblite.dtd  html-stylesheet.xsl  styles.css
utils/: tools.ps1
