[build-system]
requires = ["poetry-core (>=2.0.0)", "poetry-dynamic-versioning (>=1.5.2,<2.0.0)"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
requires-poetry = ">=2.0.0"
packages = [ { include="CedarBackup3", from="src" } ]
include = [
   { path='Changelog', format='sdist' },
   { path='NOTICE', format='sdist' },
   { path='LICENSE', format='sdist' },
   { path='README.md', format='sdist' },
   { path='docs', format='sdist' },
   { path='manpages', format='sdist' },
   { path='samples', format='sdist' },
   { path='tests', format='sdist' },
]
classifiers = [
   "Development Status :: 5 - Production/Stable",
   "Operating System :: OS Independent",
   "Environment :: Console",
   "Intended Audience :: System Administrators",
   "Natural Language :: English",
   "Topic :: Software Development :: Libraries",
   "Topic :: System :: Archiving :: Backup",
   "Topic :: Utilities",
]
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version=">=1.5.2,<2.0.0", extras=["plugin"] }

# Published version is managed using Git tags
# We get either the tag (like "0.24.1") or a snapshot-type version (like "0.24.1+3.e8319c4")
[tool.poetry-dynamic-versioning]
enable = true
pattern = '^[vV](?P<base>\d+\.\d+\.\d+)'  # this extracts the version from our vX.Y.Z tag format
format-jinja = "{% if distance == 0 and not dirty %}{{ base }}{% else %}{{ base }}+{{ distance }}.{{ commit }}{% endif %}"

[project]
name = "cedar-backup3"
requires-python = ">=3.10,<4"
description = "Implements local and remote backups to CD/DVD and Amazon S3"
keywords = [ 'local', 'remote', 'backup', 'scp' ]
authors = [ { name="Kenneth J. Pronovici", email="pronovic@ieee.org" } ]
license = "GPL-2.0-only"
readme = "PyPI.md"
dynamic = [ "classifiers", "version" ]
dependencies = [
   "chardet (>=5.2.0,<6.0.0)",  # Debian trixie has 5.2.0
]

[project.urls]
homepage = "https://pypi.org/project/cedar-backup3/"
repository = "https://github.com/pronovic/cedar-backup3"

[project.optional-dependencies]
docs = [
   "sphinx (>=8.1.3,<9.0.0)",              # Debian trixie has 8.1.3
   "sphinx-autoapi (>=3.3.3,<4.0.0)",      # Debian trixie has 3.3.3
]

[tool.poetry.group.dev.dependencies]
coverage = ">=7.4.4,<8.0.0"
pylint = ">=3.0.1,<4.0.0"
pre-commit = ">=4.0.1,<5.0.0"
colorama = ">=0.4.6,<1.0.0"
ruff = "^0.12.10"

[tool.poetry.scripts]
cback3 = 'CedarBackup3.scripts:cback3' 
cback3-amazons3-sync = 'CedarBackup3.scripts:amazons3' 
cback3-span = 'CedarBackup3.scripts:span' 

[tool.coverage.paths]
source = [ "src" ]

[tool.coverage.run]
branch = true
source = [ "src/CedarBackup3" ]

[tool.coverage.report]
show_missing = false
precision = 1

[tool.ruff]
src = ["src"]
extend-exclude = [ "docs", "notes", ".poetry" ]
line-length = 132
preview = true

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
docstring-code-format = false
